[package]
name = "advanced_structures"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand_xoshiro = "0.6.0"
rand = "0.8.5"
clap = { version = "4.0.29", features = ["derive"] }
num = "0.4.0"
svdlibrs = "0.5.0"
nalgebra-sparse = "0.8.0"
